fix: Adding too much spacing and overflowing on mobile #29
Move setting of height into media query
Also, Increase height of project card on larger screens

--- a/frontend/src/components/home/project/ProjectView.module.css
+++ b/frontend/src/components/home/project/ProjectView.module.css
@@ -13,7 +13,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    height: 45vh;
 }
 
 @media screen and (min-width: 768px) {
@@ -23,4 +22,10 @@
         height: unset;
         flex-grow: 0;
     }
+
+    #project-card-container {
+        /* Has to be set for project card too */
+        --project-card-height: 50vh;
+        height: var(--project-card-height);
+    } 
 }
