--- a/frontend/src/components/home/project/SkillFilter.module.css
+++ b/frontend/src/components/home/project/SkillFilter.module.css
@@ -3,6 +3,7 @@
 
     /* Set skill filter text and icon colour */
     --filter-colour: var(--text-colour);
+    margin-bottom: 0.5em;
 }
 
 #skill-filter-container svg > path {
